Fixed z-index bug
For unknown reasons 3-digit z-index values are treated as hex and prepended with a #

--- a/projects/ccf-eui/src/app/app.component.scss
+++ b/projects/ccf-eui/src/app/app.component.scss
@@ -5,7 +5,7 @@
   overflow: hidden;
 
   ccf-header {
-    z-index: 200;
+    z-index: 99;
   }
 
   ccf-drawer-container {
